--- a/css/layout.css
+++ b/css/layout.css
@@ -361,7 +361,9 @@ button {
 
 /* Portfolio Content */
 #portfolio-wrapper {
-    display: inline;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #portfolio-wrapper .columns {
     margin-bottom: 36px;
@@ -488,4 +490,72 @@ footer .social-links li:first-child {
 }
 #go-top a:hover {
     background-color: #f06000;
+}
+
+/* ------------------------------------------------------------------ */
+/* g. Achievements
+/* ------------------------------------------------------------------ */
+
+#achievements {
+    background: #2b2b2b;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #fff;
+}
+
+#achievements h1 {
+    font: 24px 'opensans-semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-bottom: 48px;
+    color: #95a3a3;
+}
+
+.nuit {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 80%;
+    border: #f06000 solid 1px;
+    border-radius: 10px;
+    padding: 40px;
+}
+
+.nuit .badge {
+    width: 300px;
+    margin-right: 50px;
+}
+
+.badge_image {
+    width: 100%;
+}
+
+.description {
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+}
+
+.description h2 {
+    font: 24px 'opensans-semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 48px;
+    color: #95a3a3;
+}
+
+.description p {
+    text-align: justify;
+}
+
+.description a {
+    color: #fff;
+}
+
+.description a:hover, .description a:focus {
+    color: #f06000;
 }
