--- a/css/layout.css
+++ b/css/layout.css
@@ -516,7 +516,7 @@ footer .social-links li:first-child {
     letter-spacing: 1px;
     text-align: center;
     margin-bottom: 48px;
-    color: #95a3a3;
+    color: #fff;
 }
 
 .nuit {
@@ -563,4 +563,56 @@ footer .social-links li:first-child {
 
 .nuit .description a:hover, .nuit .description a:focus {
     color: #f06000;
+}
+
+/* ------------------------------------------------------------------ */
+/* h. Slider Skills
+/* ------------------------------------------------------------------ */
+
+.slick-slide img {
+    margin: auto;
+    height: 50px;
+}
+
+#skills {
+    width: 100%;
+    background-color: #2b2b2b;
+}
+
+#skills h1 {
+    font: 30px 'opensans-semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: 48px;
+    color: #fff;
+}
+
+.sliders-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.language-type-container {
+    margin: 40px;
+    padding: 40px;
+    width: 80%;
+    border-bottom: #f06000 solid 1px;
+}
+
+.small-slider {
+    width: 50%;
+}
+
+.language-type-container h2 {
+    font: 24px 'opensans-semibold', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 48px;
+    color: #fff;
+    text-align: center;
 }
